--- a/pd110/src/templates/inicio.html
+++ b/pd110/src/templates/inicio.html
@@ -1,7 +1,8 @@
 <h1>Hey</h1>
-<h2>como esta</h2>
-<!--para renderizar variables en la plantilla -->
-<form>
-    {{ the_form.as_p}}
-    <input type="submit" value="Registrarse" />
+
+<!---para renderizar variables en la plantilla --->
+
+<form method="POST" action="">{% csrf_token %}
+{{ the_form.as_p}}
+<input type="submit" value="Registrarse" />
 </form>
