Modelform en la vista

--- a/pd110/src/templates/inicio.html
+++ b/pd110/src/templates/inicio.html
@@ -4,8 +4,9 @@
 <br/>
 
 <!---para renderizar variables en la plantilla --->
-
+{% if form %}
 <form method="POST" action="">{% csrf_token %}
 {{ the_form.as_p }}
 <input type="submit" value="Registrarse" />
 </form>
+{% endif %}
